src/jvm.rs

#![allow(non_upper_case_globals)]
#![allow(non_snake_case)]
#![allow(non_camel_case_types)]
#![allow(dead_code)]

use jni::sys::{jint, jobject, jlong, jmethodID, jclass, jboolean, JNIEnv, jvalue, jfloat, jdouble, jstring, jobjectArray, jintArray, jbyte, jsize, jbyteArray};
use crate::bitfield::__BindgenBitfieldUnit;

pub type size_t = ::std::os::raw::c_ulong;
pub type __off_t = ::std::os::raw::c_long;
pub type __off64_t = ::std::os::raw::c_long;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IO_marker {
	_unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IO_codecvt {
	_unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IO_wide_data {
	_unused: [u8; 0],
}
pub type _IO_lock_t = ::std::os::raw::c_void;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IO_FILE {
	pub _flags: ::std::os::raw::c_int,
	pub _IO_read_ptr: *mut ::std::os::raw::c_char,
	pub _IO_read_end: *mut ::std::os::raw::c_char,
	pub _IO_read_base: *mut ::std::os::raw::c_char,
	pub _IO_write_base: *mut ::std::os::raw::c_char,
	pub _IO_write_ptr: *mut ::std::os::raw::c_char,
	pub _IO_write_end: *mut ::std::os::raw::c_char,
	pub _IO_buf_base: *mut ::std::os::raw::c_char,
	pub _IO_buf_end: *mut ::std::os::raw::c_char,
	pub _IO_save_base: *mut ::std::os::raw::c_char,
	pub _IO_backup_base: *mut ::std::os::raw::c_char,
	pub _IO_save_end: *mut ::std::os::raw::c_char,
	pub _markers: *mut _IO_marker,
	pub _chain: *mut _IO_FILE,
	pub _fileno: ::std::os::raw::c_int,
	pub _flags2: ::std::os::raw::c_int,
	pub _old_offset: __off_t,
	pub _cur_column: ::std::os::raw::c_ushort,
	pub _vtable_offset: ::std::os::raw::c_schar,
	pub _shortbuf: [::std::os::raw::c_char; 1usize],
	pub _lock: *mut _IO_lock_t,
	pub _offset: __off64_t,
	pub _codecvt: *mut _IO_codecvt,
	pub _wide_data: *mut _IO_wide_data,
	pub _freeres_list: *mut _IO_FILE,
	pub _freeres_buf: *mut ::std::os::raw::c_void,
	pub __pad5: size_t,
	pub _mode: ::std::os::raw::c_int,
	pub _unused2: [::std::os::raw::c_char; 20usize],
}
pub type __FILE = _IO_FILE;
pub type FILE = _IO_FILE;

pub const JVM_INTERFACE_VERSION: u32 = 4;
pub const JVM_CALLER_DEPTH: i32 = -1;
pub const JVM_TRACING_DTRACE_VERSION: u32 = 1;
pub const JVM_CLASSFILE_MAJOR_VERSION: u32 = 52;
pub const JVM_CLASSFILE_MINOR_VERSION: u32 = 0;
pub const JVM_IO_ERR: i32 = -1;
pub const JVM_IO_INTR: i32 = -2;
pub const JVM_EEXIST: i32 = -100;

extern "C" {
	pub fn JVM_GetInterfaceVersion() -> jint;
}

extern "C" {
	#[doc = "PART 1: Functions for Native Libraries"]
	pub fn JVM_IHashCode(env: *mut JNIEnv, obj: jobject) -> jint;
}

extern "C" {
	pub fn JVM_MonitorWait(env: *mut JNIEnv, obj: jobject, ms: jlong);
}

extern "C" {
	pub fn JVM_MonitorNotify(env: *mut JNIEnv, obj: jobject);
}

extern "C" {
	pub fn JVM_MonitorNotifyAll(env: *mut JNIEnv, obj: jobject);
}

extern "C" {
	pub fn JVM_Clone(env: *mut JNIEnv, obj: jobject) -> jobject;
}

extern "C" {
	pub fn JVM_InternString(env: *mut JNIEnv, str_: jstring) -> jstring;
}

extern "C" {
	pub fn JVM_CurrentTimeMillis(env: *mut JNIEnv, ignored: jclass) -> jlong;
}

extern "C" {
	pub fn JVM_NanoTime(env: *mut JNIEnv, ignored: jclass) -> jlong;
}

extern "C" {
	pub fn JVM_ArrayCopy(
		env: *mut JNIEnv,
		ignored: jclass,
		src: jobject,
		src_pos: jint,
		dst: jobject,
		dst_pos: jint,
		length: jint,
	);
}

extern "C" {
	pub fn JVM_InitProperties(env: *mut JNIEnv, p: jobject) -> jobject;
}

extern "C" {
	pub fn JVM_OnExit(func: ::std::option::Option<unsafe extern "C" fn()>);
}

extern "C" {
	pub fn JVM_Exit(code: jint);
}

extern "C" {
	pub fn JVM_Halt(code: jint);
}

extern "C" {
	pub fn JVM_GC();
}

extern "C" {
	pub fn JVM_MaxObjectInspectionAge() -> jlong;
}

extern "C" {
	pub fn JVM_TraceInstructions(on: jboolean);
}

extern "C" {
	pub fn JVM_TraceMethodCalls(on: jboolean);
}

extern "C" {
	pub fn JVM_TotalMemory() -> jlong;
}

extern "C" {
	pub fn JVM_FreeMemory() -> jlong;
}

extern "C" {
	pub fn JVM_MaxMemory() -> jlong;
}

extern "C" {
	pub fn JVM_ActiveProcessorCount() -> jint;
}

extern "C" {
	pub fn JVM_LoadLibrary(name: *const ::std::os::raw::c_char) -> *mut ::std::os::raw::c_void;
}

extern "C" {
	pub fn JVM_UnloadLibrary(handle: *mut ::std::os::raw::c_void);
}

extern "C" {
	pub fn JVM_FindLibraryEntry(
		handle: *mut ::std::os::raw::c_void,
		name: *const ::std::os::raw::c_char,
	) -> *mut ::std::os::raw::c_void;
}

extern "C" {
	pub fn JVM_IsSupportedJNIVersion(version: jint) -> jboolean;
}

extern "C" {
	pub fn JVM_IsNaN(d: jdouble) -> jboolean;
}

extern "C" {
	pub fn JVM_FillInStackTrace(env: *mut JNIEnv, throwable: jobject);
}

extern "C" {
	pub fn JVM_GetStackTraceDepth(env: *mut JNIEnv, throwable: jobject) -> jint;
}

extern "C" {
	pub fn JVM_GetStackTraceElement(env: *mut JNIEnv, throwable: jobject, index: jint) -> jobject;
}

extern "C" {
	pub fn JVM_InitializeCompiler(env: *mut JNIEnv, compCls: jclass);
}

extern "C" {
	pub fn JVM_IsSilentCompiler(env: *mut JNIEnv, compCls: jclass) -> jboolean;
}

extern "C" {
	pub fn JVM_CompileClass(env: *mut JNIEnv, compCls: jclass, cls: jclass) -> jboolean;
}

extern "C" {
	pub fn JVM_CompileClasses(env: *mut JNIEnv, cls: jclass, jname: jstring) -> jboolean;
}

extern "C" {
	pub fn JVM_CompilerCommand(env: *mut JNIEnv, compCls: jclass, arg: jobject) -> jobject;
}

extern "C" {
	pub fn JVM_EnableCompiler(env: *mut JNIEnv, compCls: jclass);
}

extern "C" {
	pub fn JVM_DisableCompiler(env: *mut JNIEnv, compCls: jclass);
}

extern "C" {
	pub fn JVM_StartThread(env: *mut JNIEnv, thread: jobject);
}

extern "C" {
	pub fn JVM_StopThread(env: *mut JNIEnv, thread: jobject, exception: jobject);
}

extern "C" {
	pub fn JVM_IsThreadAlive(env: *mut JNIEnv, thread: jobject) -> jboolean;
}

extern "C" {
	pub fn JVM_SuspendThread(env: *mut JNIEnv, thread: jobject);
}

extern "C" {
	pub fn JVM_ResumeThread(env: *mut JNIEnv, thread: jobject);
}

extern "C" {
	pub fn JVM_SetThreadPriority(env: *mut JNIEnv, thread: jobject, prio: jint);
}

extern "C" {
	pub fn JVM_Yield(env: *mut JNIEnv, threadClass: jclass);
}

extern "C" {
	pub fn JVM_Sleep(env: *mut JNIEnv, threadClass: jclass, millis: jlong);
}

extern "C" {
	pub fn JVM_CurrentThread(env: *mut JNIEnv, threadClass: jclass) -> jobject;
}

extern "C" {
	pub fn JVM_CountStackFrames(env: *mut JNIEnv, thread: jobject) -> jint;
}

extern "C" {
	pub fn JVM_Interrupt(env: *mut JNIEnv, thread: jobject);
}

extern "C" {
	pub fn JVM_IsInterrupted(
		env: *mut JNIEnv,
		thread: jobject,
		clearInterrupted: jboolean,
	) -> jboolean;
}

extern "C" {
	pub fn JVM_HoldsLock(env: *mut JNIEnv, threadClass: jclass, obj: jobject) -> jboolean;
}

extern "C" {
	pub fn JVM_DumpAllStacks(env: *mut JNIEnv, unused: jclass);
}

extern "C" {
	pub fn JVM_GetAllThreads(env: *mut JNIEnv, dummy: jclass) -> jobjectArray;
}

extern "C" {
	pub fn JVM_SetNativeThreadName(env: *mut JNIEnv, jthread: jobject, name: jstring);
}

extern "C" {
	pub fn JVM_DumpThreads(
		env: *mut JNIEnv,
		threadClass: jclass,
		threads: jobjectArray,
	) -> jobjectArray;
}

extern "C" {
	pub fn JVM_CurrentLoadedClass(env: *mut JNIEnv) -> jclass;
}

extern "C" {
	pub fn JVM_CurrentClassLoader(env: *mut JNIEnv) -> jobject;
}

extern "C" {
	pub fn JVM_GetClassContext(env: *mut JNIEnv) -> jobjectArray;
}

extern "C" {
	pub fn JVM_ClassDepth(env: *mut JNIEnv, name: jstring) -> jint;
}

extern "C" {
	pub fn JVM_ClassLoaderDepth(env: *mut JNIEnv) -> jint;
}

extern "C" {
	pub fn JVM_GetSystemPackage(env: *mut JNIEnv, name: jstring) -> jstring;
}

extern "C" {
	pub fn JVM_GetSystemPackages(env: *mut JNIEnv) -> jobjectArray;
}

extern "C" {
	pub fn JVM_AllocateNewObject(
		env: *mut JNIEnv,
		obj: jobject,
		currClass: jclass,
		initClass: jclass,
	) -> jobject;
}

extern "C" {
	pub fn JVM_AllocateNewArray(
		env: *mut JNIEnv,
		obj: jobject,
		currClass: jclass,
		length: jint,
	) -> jobject;
}

extern "C" {
	pub fn JVM_LatestUserDefinedLoader(env: *mut JNIEnv) -> jobject;
}

extern "C" {
	pub fn JVM_LoadClass0(
		env: *mut JNIEnv,
		obj: jobject,
		currClass: jclass,
		currClassName: jstring,
	) -> jclass;
}

extern "C" {
	pub fn JVM_GetArrayLength(env: *mut JNIEnv, arr: jobject) -> jint;
}

extern "C" {
	pub fn JVM_GetArrayElement(env: *mut JNIEnv, arr: jobject, index: jint) -> jobject;
}

extern "C" {
	pub fn JVM_GetPrimitiveArrayElement(
		env: *mut JNIEnv,
		arr: jobject,
		index: jint,
		wCode: jint,
	) -> jvalue;
}

extern "C" {
	pub fn JVM_SetArrayElement(env: *mut JNIEnv, arr: jobject, index: jint, val: jobject);
}

extern "C" {
	pub fn JVM_SetPrimitiveArrayElement(
		env: *mut JNIEnv,
		arr: jobject,
		index: jint,
		v: jvalue,
		vCode: ::std::os::raw::c_uchar,
	);
}

extern "C" {
	pub fn JVM_NewArray(env: *mut JNIEnv, eltClass: jclass, length: jint) -> jobject;
}

extern "C" {
	pub fn JVM_NewMultiArray(env: *mut JNIEnv, eltClass: jclass, dim: jintArray) -> jobject;
}

extern "C" {
	pub fn JVM_GetCallerClass(env: *mut JNIEnv, depth: ::std::os::raw::c_int) -> jclass;
}

extern "C" {
	pub fn JVM_FindPrimitiveClass(env: *mut JNIEnv, utf: *const ::std::os::raw::c_char) -> jclass;
}

extern "C" {
	pub fn JVM_ResolveClass(env: *mut JNIEnv, cls: jclass);
}

extern "C" {
	pub fn JVM_FindClassFromBootLoader(
		env: *mut JNIEnv,
		name: *const ::std::os::raw::c_char,
	) -> jclass;
}

extern "C" {
	pub fn JVM_FindClassFromCaller(
		env: *mut JNIEnv,
		name: *const ::std::os::raw::c_char,
		init: jboolean,
		loader: jobject,
		caller: jclass,
	) -> jclass;
}

extern "C" {
	pub fn JVM_FindClassFromClassLoader(
		env: *mut JNIEnv,
		name: *const ::std::os::raw::c_char,
		init: jboolean,
		loader: jobject,
		throwError: jboolean,
	) -> jclass;
}

extern "C" {
	pub fn JVM_FindClassFromClass(
		env: *mut JNIEnv,
		name: *const ::std::os::raw::c_char,
		init: jboolean,
		from: jclass,
	) -> jclass;
}

extern "C" {
	pub fn JVM_FindLoadedClass(env: *mut JNIEnv, loader: jobject, name: jstring) -> jclass;
}

extern "C" {
	pub fn JVM_DefineClass(
		env: *mut JNIEnv,
		name: *const ::std::os::raw::c_char,
		loader: jobject,
		buf: *const jbyte,
		len: jsize,
		pd: jobject,
	) -> jclass;
}

extern "C" {
	pub fn JVM_DefineClassWithSource(
		env: *mut JNIEnv,
		name: *const ::std::os::raw::c_char,
		loader: jobject,
		buf: *const jbyte,
		len: jsize,
		pd: jobject,
		source: *const ::std::os::raw::c_char,
	) -> jclass;
}

extern "C" {
	pub fn JVM_GetClassName(env: *mut JNIEnv, cls: jclass) -> jstring;
}

extern "C" {
	pub fn JVM_GetClassInterfaces(env: *mut JNIEnv, cls: jclass) -> jobjectArray;
}

extern "C" {
	pub fn JVM_IsInterface(env: *mut JNIEnv, cls: jclass) -> jboolean;
}

extern "C" {
	pub fn JVM_GetClassSigners(env: *mut JNIEnv, cls: jclass) -> jobjectArray;
}

extern "C" {
	pub fn JVM_SetClassSigners(env: *mut JNIEnv, cls: jclass, signers: jobjectArray);
}

extern "C" {
	pub fn JVM_GetProtectionDomain(env: *mut JNIEnv, cls: jclass) -> jobject;
}

extern "C" {
	pub fn JVM_IsArrayClass(env: *mut JNIEnv, cls: jclass) -> jboolean;
}

extern "C" {
	pub fn JVM_IsPrimitiveClass(env: *mut JNIEnv, cls: jclass) -> jboolean;
}

extern "C" {
	pub fn JVM_GetComponentType(env: *mut JNIEnv, cls: jclass) -> jclass;
}

extern "C" {
	pub fn JVM_GetClassModifiers(env: *mut JNIEnv, cls: jclass) -> jint;
}

extern "C" {
	pub fn JVM_GetDeclaredClasses(env: *mut JNIEnv, ofClass: jclass) -> jobjectArray;
}

extern "C" {
	pub fn JVM_GetDeclaringClass(env: *mut JNIEnv, ofClass: jclass) -> jclass;
}

extern "C" {
	pub fn JVM_GetClassSignature(env: *mut JNIEnv, cls: jclass) -> jstring;
}

extern "C" {
	pub fn JVM_GetClassAnnotations(env: *mut JNIEnv, cls: jclass) -> jbyteArray;
}

extern "C" {
	pub fn JVM_GetClassTypeAnnotations(env: *mut JNIEnv, cls: jclass) -> jbyteArray;
}

extern "C" {
	pub fn JVM_GetFieldTypeAnnotations(env: *mut JNIEnv, field: jobject) -> jbyteArray;
}

extern "C" {
	pub fn JVM_GetMethodTypeAnnotations(env: *mut JNIEnv, method: jobject) -> jbyteArray;
}

extern "C" {
	pub fn JVM_GetClassDeclaredMethods(
		env: *mut JNIEnv,
		ofClass: jclass,
		publicOnly: jboolean,
	) -> jobjectArray;
}
